--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "async": "^2.6.0",
     "hashring": "^3.2.0",
     "hyperid": "^1.2.0",
-    "shortid": "^2.2.8"
+    "shortid": "^2.2.8",
+    "vertex-logger": "^2.3.2",
+    "vertex-names": "^1.1.4"
   },
   "devDependencies": {
     "mocha": "*",
