--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "async": "^2.6.0",
     "hashring": "^3.2.0",
     "hyperid": "^1.2.0",
-    "shortid": "^2.2.8"
+    "shortid": "^2.2.8",
+    "ws": "^4.0.0"
   },
   "devDependencies": {
     "mocha": "*",
