--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "2.0.0",
   "main": "./lib/index",
   "scripts": {
-    "test": "mocha test/*/*"
+    "test": "LOG_LEVEL=error mocha test/*/*"
   },
   "author": "Tenacious and NSOFT",
   "license": "MIT",
