--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "json-socket": "^0.3.0",
     "lru-cache": "^4.1.1",
     "shortid": "^2.2.8",
+    "uws": "^9.14.0",
     "vertex-logger": "^2.3.2",
     "vertex-names": "^1.1.4",
     "ws": "^4.0.0"
