feature: seed server cli completed

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "async": "^2.6.0",
+    "cli": "^1.0.1",
     "dag-map": "^2.0.2",
     "express": "^4.16.2",
     "hashring": "^3.2.0",
@@ -25,7 +26,9 @@
     "ioredis": "^3.2.2",
     "json-socket": "^0.3.0",
     "lru-cache": "^4.1.1",
+    "prompt": "^1.0.0",
     "shortid": "^2.2.8",
+    "sillyname": "^0.1.0",
     "uws": "^9.14.0",
     "vertex-logger": "^2.3.2",
     "vertex-names": "^1.1.4",
